[*] Colors improvement. [*] Added more details to the 3D gift illustration.

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
             <div id='index'>
                 <p class='title'>Need an app to help you host a Secret Santa?</p>
                 <p class='sub-title'>Enter the names, gift suggestions, and more for free!</p>
-                <div align='center'>
-                    <img src='img/Gift3d.png'>
+                <div>
+                    <div align='center'>
+                        <img src='img/Gift3d.png'>
+                    </div>
                 </div>
                 <button class='button'>Start</button>
                 <p onclick="openSettings('use')">How to use</p>
